outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval378553111674543563_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines distance, degree centrality, and a novelty factor (prioritizing less frequently visited nodes), while adjusting weights based on remaining nodes and incorporating a penalty for overly short distances to encourage exploration.}
                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines distance, degree centrality, and a novelty factor (prioritizing less frequently visited nodes), while adjusting weights based on remaining nodes and incorporating a penalty for overly short distances to encourage exploration.}
                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
